--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
     "vue": "^2.6.11",
+    "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
     "vue-zoomer": "^0.3.6",
     "vuetify": "^2.2.11"
