--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "firebase": "^7.24.0",
+    "v-body-scroll-lock": "^1.1.3",
     "vue": "^2.6.11",
     "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
